# elmer

./: .gitignore  CLAUDE.md  CONTEXT.md  DECISIONS.md  DESIGN.md  GUIDE.md  README.md  ROADMAP.md  pyproject.toml  scratch.md
.claude/: mcp.json
.elmer/: .gitignore  config.toml  explore-act.md  mcp-server.md
.elmer/archetypes/: explore-act.md  explore.md  prototype.md
.elmer/proposals/: inhabit-the-role-of-ai-architect-designer-implementer-you.md
docs/: continual-improvement-questions.md
src/elmer/: __init__.py  archselect.py  archstats.py  autoapprove.py  batch.py  cli.py  config.py  costs.py  daemon.py  dashboard.py  decompose.py  digest.py  explore.py  gate.py  generate.py  hooks.py  implement.py  insights.py  invariants.py  mcp_server.py  plan.py  pr.py  promptgen.py  questions.py  replan.py  review.py  scaffold.py  skill_scaffold.py  state.py  synthesize.py  worker.py  worktree.py
src/elmer/agents/: adr-proposal.md  amend.md  architecture-audit.md  benchmark.md  coherence-audit.md  consistency-audit.md  dead-end-analysis.md  decompose.md  devil-advocate.md  digest.md  documentation-audit.md  explore-act.md  (+17 more)
tests/: conftest.py  test_autoapprove_policy.py  test_completion_check.py  test_config.py  test_config_validation.py  test_doc_only.py  test_duration_estimate.py  test_failure_taxonomy.py  test_key_files_flow.py  test_mcp_archetypes.py  test_null_costs.py  test_plan_dependencies.py  test_repeated_failure.py  test_replan.py  test_retry_policy.py  test_scoring.py  test_stale_pending.py  test_state.py  test_verification_failures.py  test_worktree.py
(+26 files in other folders)
